[package]
name = "health_haven_medical_centre"
version = "0.1.0"
edition = "2021"
description = "A medical centre application built using Actix-web, providing health services and information."
authors = ["Farouk Pandor <faroukpandor@gmail.com>"]
license = "MIT"
rust-version = "1.60.0"
categories = ["web-programming", "health", "actix"]
keywords = ["actix", "web", "medical", "healthcare"]
repository = "https://github.com/FaroukPandor/health_haven_medical_centre"
homepage = "https://healthhaven.github.io"
documentation = "https://healthhaven.github.io/docs"
readme = "README.md"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "postgres", "sqlite", "mysql"] }
syn = { version = "1.0", features = ["full"] }
dotenv = "0.15"
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
bcrypt = "0.11"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
validator = "0.14"
actix-cors = "0.6"
argon2 = "0.3"
thiserror = "1.0"
actix-files = "0.6"
jsonwebtoken = "8.1"
actix-multipart = "0.4"  # Optional: for handling file uploads

# Testing dependencies
[dev-dependencies]
actix-rt = "2.5"
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json"] }

[features]
default = ["postgres"]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]

[profile.release]
opt-level = "z"

[workspace]
# Uncomment the following line if your project has a workspace with multiple members
# members = ["health_haven_backend", "health_haven_frontend"]

# Optional: for Cargo.lock management in multi-package repositories
# Uncomment the following line if you need to manage workspace dependencies
# [workspace.dependencies]
