[package]
name = "health_haven_medical_centre"
version = "0.1.0"
edition = "2021"
description = "A medical centre application built using Actix-web, providing health services and information."
authors = ["Farouk Pandor <faroukpandor@gmail.com>"]
license = "MIT"
rust-version = "1.60.0"
categories = ["web-programming", "health", "actix"]
keywords = ["actix", "web", "medical", "healthcare"]
repository = "https://github.com/FaroukPandor/health_haven_medical_centre"
homepage = "https://healthhaven.github.io"
documentation = "https://healthhaven.github.io/docs"
readme = "README.md"

[dependencies]
# Web framework for building web applications
actix-web = "4.0"

# Serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SQL database support
sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "postgres", "sqlite", "mysql"] }

# Parsing Rust syntax (for procedural macros)
syn = { version = "1.0", features = ["full"] }

# Environment variable management
dotenv = "0.15"

# Logging support
log = "0.4"

# Asynchronous runtime
tokio = { version = "1.0", features = ["full"] }

# Security: SSL support
openssl = { version = "0.10", features = ["vendored"] }

# Password hashing
bcrypt = "0.11"
argon2 = "0.3"

# Date and time handling
chrono = "0.4"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Input validation
validator = "0.14"

# Cross-Origin Resource Sharing (CORS)
actix-cors = "0.6"

# Error handling
thiserror = "1.0"

# Static file serving
actix-files = "0.6"

# JSON Web Token (JWT) handling
jsonwebtoken = "8.1"

# Optional: for handling file uploads
actix-multipart = "0.4"

# Optional: For handling authentication
actix-identity = "0.4"

# Testing dependencies
[dev-dependencies]
# Actix runtime for async testing
actix-rt = "2.5"

# Testing utilities for Tokio
tokio-test = "0.4"

# HTTP client for making requests in tests
reqwest = { version = "0.11", features = ["json"] }

[features]
# Default features, including PostgreSQL support
default = ["postgres"]

# Optional database support for SQLite and MySQL
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]

[profile.release]
# Optimize for size
opt-level = "z"

[build-dependencies]
# Required for procedural macros or code generation
syn = "1"

[workspace]
# Uncomment the following line if your project has a workspace with multiple members
# members = ["health_haven_backend", "health_haven_frontend"]

# Optional: for Cargo.lock management in multi-package repositories
# Uncomment the following line if you need to manage workspace dependencies
# [workspace.dependencies]
